--- a/src/FSharp.Utils/FSharp.Utils.fsproj
+++ b/src/FSharp.Utils/FSharp.Utils.fsproj
@@ -1,9 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <PackageId>FSharp.Utils</PackageId>
+    <Title>FSharp.Utils</Title>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.1</Version>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Reflection.fs" />
+    <Compile Include="Dictionary.fs" />
     <Compile Include="TaskBuilder.fs" />
     <Compile Include="Task.fs" />
+    <Compile Include="Quotations.fs" />
+    <Compile Include="AssemblyInfo.fs" />
+    <None Include="..\..\LICENSE.txt" Pack="true" PackagePath="$(PackageLicenseFile)" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 </Project>
