--- a/tests/FSharp.Utils.UnitTests/FSharp.Utils.UnitTests.fsproj
+++ b/tests/FSharp.Utils.UnitTests/FSharp.Utils.UnitTests.fsproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Dictionary.fs" />
     <Compile Include="Reflection.fs" />
     <Compile Include="Quotations.fs" />
     <Compile Include="Program.fs" />
