Updated version number Added Time module Added Guid module Added Option module Added DependencyInjection module Added more tests

--- a/tests/FSharp.Utils.UnitTests/FSharp.Utils.UnitTests.fsproj
+++ b/tests/FSharp.Utils.UnitTests/FSharp.Utils.UnitTests.fsproj
@@ -17,6 +17,9 @@
     <Compile Include="Dictionary.fs" />
     <Compile Include="Reflection.fs" />
     <Compile Include="Quotations.fs" />
+    <Compile Include="Guid.fs" />
+    <Compile Include="Option.fs" />
+    <Compile Include="Time.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
