--- a/src/FSharp.Utils/FSharp.Utils.fsproj
+++ b/src/FSharp.Utils/FSharp.Utils.fsproj
@@ -3,7 +3,7 @@
     <PackageId>FSharp.Utils</PackageId>
     <Title>FSharp.Utils</Title>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.2</Version>
+    <Version>0.0.3</Version>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
   <ItemGroup>
@@ -11,11 +11,16 @@
     <Compile Include="Dictionary.fs" />
     <Compile Include="TaskBuilder.fs" />
     <Compile Include="Task.fs" />
+    <Compile Include="Guid.fs" />
+    <Compile Include="Time.fs" />
+    <Compile Include="Option.fs" />
     <Compile Include="Quotations.fs" />
+    <Compile Include="DependencyInjection.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <None Include="..\..\LICENSE.txt" Pack="true" PackagePath="$(PackageLicenseFile)" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 </Project>
