--- a/src/FSharp.Utils/FSharp.Utils.fsproj
+++ b/src/FSharp.Utils/FSharp.Utils.fsproj
@@ -3,21 +3,22 @@
     <PackageId>FSharp.Utils</PackageId>
     <Title>FSharp.Utils</Title>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.7</Version>
+    <Version>0.0.8</Version>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Reflection.fs" />
     <Compile Include="HashSet.fs" />
     <Compile Include="Dictionary.fs" />
-    <Compile Include="Builder/Task.fs" />
-    <Compile Include="Task.fs" />
     <Compile Include="List.fs" />
     <Compile Include="Guid.fs" />
     <Compile Include="Time.fs" />
-    <Compile Include="Option.fs" />
+    <Compile Include="Result.fs" />
     <Compile Include="Quotations.fs" />
     <Compile Include="DependencyInjection.fs" />
+    <Compile Include="Builder/Task.fs" />
+    <Compile Include="Task.fs" />
+    <Compile Include="Option.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <None Include="..\..\LICENSE.txt" Pack="true" PackagePath="$(PackageLicenseFile)" />
   </ItemGroup>
@@ -25,5 +26,6 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="System.Reactive" Version="4.1.3" />
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.2" />
   </ItemGroup>
 </Project>
