--- a/src/FSharp.Utils/FSharp.Utils.fsproj
+++ b/src/FSharp.Utils/FSharp.Utils.fsproj
@@ -3,12 +3,14 @@
     <PackageId>FSharp.Utils</PackageId>
     <Title>FSharp.Utils</Title>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.8</Version>
+    <Version>0.0.9</Version>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Reflection.fs" />
     <Compile Include="HashSet.fs" />
+    <Compile Include="ResizeArray.fs" />
+    <Compile Include="SortedSet.fs" />
     <Compile Include="Dictionary.fs" />
     <Compile Include="List.fs" />
     <Compile Include="Guid.fs" />
