--- a/src/FSharp.Utils/FSharp.Utils.fsproj
+++ b/src/FSharp.Utils/FSharp.Utils.fsproj
@@ -3,7 +3,7 @@
     <PackageId>FSharp.Utils</PackageId>
     <Title>FSharp.Utils</Title>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.10</Version>
+    <Version>0.0.11</Version>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
   <ItemGroup>
@@ -21,6 +21,7 @@
     <Compile Include="Builder/Task.fs" />
     <Compile Include="Task.fs" />
     <Compile Include="Option.fs" />
+    <Compile Include="ValueOption.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <None Include="..\..\LICENSE.txt" Pack="true" PackagePath="$(PackageLicenseFile)" />
   </ItemGroup>
