Added unit tests for new reflection methods Fixed minor bugs w/ reflection Updated to version 0.0.12

--- a/tests/FSharp.Utils.UnitTests/FSharp.Utils.UnitTests.fsproj
+++ b/tests/FSharp.Utils.UnitTests/FSharp.Utils.UnitTests.fsproj
@@ -22,6 +22,7 @@
     <Compile Include="Quotations.fs" />
     <Compile Include="Guid.fs" />
     <Compile Include="Option.fs" />
+    <Compile Include="ValueOption.fs" />
     <Compile Include="Time.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
