--- a/src/FSharp.Utils/FSharp.Utils.fsproj
+++ b/src/FSharp.Utils/FSharp.Utils.fsproj
@@ -3,7 +3,7 @@
     <PackageId>FSharp.Utils</PackageId>
     <Title>FSharp.Utils</Title>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.14</Version>
+    <Version>0.0.15</Version>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
   <ItemGroup>
@@ -12,6 +12,7 @@
     <Compile Include="ResizeArray.fs" />
     <Compile Include="SortedSet.fs" />
     <Compile Include="Dictionary.fs" />
+    <Compile Include="SortedDictionary.fs" />
     <Compile Include="List.fs" />
     <Compile Include="Guid.fs" />
     <Compile Include="Time.fs" />
@@ -22,6 +23,7 @@
     <Compile Include="Task.fs" />
     <Compile Include="Option.fs" />
     <Compile Include="ValueOption.fs" />
+    <Compile Include="Builder/Maybe.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <None Include="..\..\LICENSE.txt" Pack="true" PackagePath="$(PackageLicenseFile)" />
   </ItemGroup>
