--- a/.gitignore
+++ b/.gitignore
@@ -518,3 +518,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/visualstudiocode,windows,aspnetcore,csharp,fsharp
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+.ionide/**
